kuard-sts.yaml
apiVersion: v1
kind: Service
metadata:
  name: kuard
  labels:
    app: kuard
spec:
  ports:
  - port: 80
    name: web
  clusterIP: None
  selector:
    app: kuard
---
apiVersion: apps/v1beta1
kind: StatefulSet
metadata:
  name: kuard
spec:
  serviceName: kuard
  replicas: 2
  template:
    metadata:
      labels:
        app: kuard
    spec:
      containers:
      - name: kuard
        image: gcr.io/kuar-demo/kuard-amd64:1
        ports:
        - name: http
          containerPort: 8080
        volumeMounts:
        - name: data
          mountPath: /data
  volumeClaimTemplates:
  - metadata:
      name: data
    spec:
      resources:
        requests:
          storage: 1Mi
      accessModes:
      - ReadWriteOnce
