wordpress-wordpress-pub.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: wordpress
  name: wordpress-wordpress-pub
spec:
  externalTrafficPolicy: Local
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app.kubernetes.io/name: wordpress
  sessionAffinity: None
  type: LoadBalancer
